# support-survival

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  03_baselines.ipynb  04_survival.ipynb  05_validation.ipynb  07_followups.ipynb
reports/: beginners_guide.md  model_card.md
scripts/: sanity_checks.py  train_and_save.py
src/support_survival/: __init__.py  api.py  data.py  eda.py  evaluate.py  features.py  models.py  pipeline.py  validate.py
src/support_survival/static/: predict.html  triage.html
src/support_survival/static/css/: monitor.css
src/support_survival/static/js/: monitor.js  predict.js  triage.js
tests/: test_api.py  test_data.py  test_eda.py  test_evaluate.py  test_features.py  test_models.py  test_pipeline.py  test_sanity_checks.py  test_validate.py
