[project]
name = "support-survival"
version = "0.1.0"
description = "Survival analysis and mortality risk modeling on the SUPPORT cohort"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "h5py>=3.8",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "lifelines>=0.27",
    "xgboost>=2.0",
    "shap>=0.44",
    "joblib>=1.3",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "jupyterlab>=4.0",
    "jupytext>=1.16",
    "httpx>=0.24",
]

[project.scripts]
support-pipeline = "support_survival.pipeline:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
